fix unit tests for logistica ms